fix slight layout bug where square expand on click on mobile

--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -7,3 +7,10 @@
     margin: 5em auto 0 auto;
     border: 0.2em solid #151515;
 }
+
+@media screen and (max-width: 420px) {
+    .board {
+        margin: 2em auto 0 auto;
+    }
+    
+}
